<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">
<ImageView
    android:id="@+id/cover_home"
    android:scaleType="fitXY"
    android:src="@drawable/cover"
    android:layout_width="match_parent"
    android:layout_height="200dp"/>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:background="@drawable/bg"
        android:layout_below="@id/cover_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/layout1"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/home_card_1"
                android:layout_weight="1"
                android:clickable="true"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/linearlayout"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@drawable/pic"
                        android:layout_width="70dp"
                        android:layout_height="70dp"/>
                    <TextView
                        android:fontFamily="@font/kalpurush"
                        android:gravity="center_vertical|center_horizontal"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:id="@+id/categories_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="#808080"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"
                        android:text="@string/life_Story"
                        android:textColor="#101010"
                        android:textSize="15dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/home_card_2"
                android:layout_weight="1"
                android:clickable="true"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <LinearLayout

                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                       android:src="@drawable/pic"
                        android:layout_width="70dp"
                        android:layout_height="70dp"/>

                    <TextView
                        android:fontFamily="@font/kalpurush"
                        android:gravity="center_vertical|center_horizontal"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="#808080"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"
                        android:textColor="#000000"
                        android:textSize="15dp"
                        android:text="@string/Waz"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout1">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card3"
                android:layout_weight="1"
                android:clickable="true"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <LinearLayout

                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@drawable/pic"
                        android:layout_width="70dp"
                        android:layout_height="70dp"/>
                    <TextView
                        android:fontFamily="@font/kalpurush"
                        android:gravity="center_vertical|center_horizontal"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="#808080"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"
                        android:text="@string/life"
                        android:textColor="#101010"
                        android:textSize="15dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card4"
                android:layout_weight="1"
                android:clickable="true"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <LinearLayout

                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@drawable/pic"
                        android:layout_width="70dp"
                        android:layout_height="70dp"/>

                    <TextView
                        android:fontFamily="@font/kalpurush"
                        android:gravity="center_vertical|center_horizontal"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="#808080"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"
                        android:textColor="#000000"
                        android:textSize="15dp"
                        android:text="@string/islam"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>


    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>